--- a/homework/01/yaml2infra/redis.yaml
+++ b/homework/01/yaml2infra/redis.yaml
@@ -1,41 +1,57 @@
 apiVersion: redis.tencentcloud.crossplane.io/v1alpha1
 kind: Instance
 metadata:
-  name: cloud-redis-tencent
+  annotations:
+    meta.upbound.io/example-id: redis/v1alpha1/instance
+  labels:
+    testing.upbound.io/example-name: foo
+  name: foo
 spec:
   forProvider:
-    availabilityZone: "ap-hongkong-2"
+    availabilityZone: ${data.tencentcloud_redis_zone_config.zone.list[0].zone}
     memSize: 8192
-    name: redis-crossplane
+    name: terrform_test
     passwordSecretRef:
       key: example-key
       name: example-secret
-      namespace: default
-#    subnetId: "redis-subnet"
-    typeId: 15
-#    vpcId: "redis-vpc"
+      namespace: upbound-system
+    port: 6379
+    redisReplicasNum: ${data.tencentcloud_redis_zone_config.zone.list[0].redis_replicas_nums[0]}
+    redisShardNum: ${data.tencentcloud_redis_zone_config.zone.list[0].redis_shard_nums[0]}
+    subnetId: ${tencentcloud_subnet.subnet.id}
+    typeId: ${data.tencentcloud_redis_zone_config.zone.list[0].type_id}
+    vpcId: ${tencentcloud_vpc.vpc.id}
 
 ---
 
 apiVersion: vpc.tencentcloud.crossplane.io/v1alpha1
 kind: Subnet
 metadata:
-  name: redis-subnet
+  annotations:
+    meta.upbound.io/example-id: redis/v1alpha1/instance
+  labels:
+    testing.upbound.io/example-name: subnet
+  name: subnet
 spec:
   forProvider:
-    availabilityZone: "ap-hongkong-2"
-    cidrBlock: "10.0.1.0/24"
-    name: "tf_redis_subnet"
-    vpcIdRef:
-      name: "redis-vpc"
+    availabilityZone: ${data.tencentcloud_redis_zone_config.zone.list[0].zone}
+    cidrBlock: 10.0.1.0/24
+    name: tf_redis_subnet
+    vpcIdSelector:
+      matchLabels:
+        testing.upbound.io/example-name: vpc
 
 ---
 
 apiVersion: vpc.tencentcloud.crossplane.io/v1alpha1
 kind: VPC
 metadata:
-  name: redis-vpc
+  annotations:
+    meta.upbound.io/example-id: redis/v1alpha1/instance
+  labels:
+    testing.upbound.io/example-name: vpc
+  name: vpc
 spec:
   forProvider:
-    cidrBlock: "10.0.0.0/16"
-    name: "redis-vpc"
+    cidrBlock: 10.0.0.0/16
+    name: tf_redis_vpc
